# Conways-Game-Of-Life

./: CMakeLists.txt  README.md  run.sh
src/: color.h  framebuffer.cpp  framebuffer.h  main.cpp  render.cpp  render.h  vertex2.h
